# CG-2020-I

./: README.md
Hello Window/: OpenGL Project.sln
Hello Window/Debug/: OpenGL Project.ilk
Hello Window/OpenGL Project/: Main.cpp  OpenGL Project.vcxproj  OpenGL Project.vcxproj.filters
Hello Window/OpenGL Project/Debug/: vc141.idb
Hello Window/OpenGL Project/Debug/OpenGL Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Sierpinski triangle/include/glad/: glad.h
Sierpinski triangle/src/: main.cpp
Tarea 1/: CMakeLists.txt
Tarea 1/lib/: glfw3.lib
Tarea 1/src/: main.cpp
Tarea 2/: CMakeLists.txt
Tarea 2.1/src/: main.cpp
Tarea 2/src/: main.cpp
Tarea 3/: CMakeLists.txt
Tarea 3/src/: glad.c  main.cpp
